src/runtime/tests/golden/errors/24_missing_return/source.z42
namespace Demo;

int GetValue() {
    var x = 42;
}

void Main() {
    var v = GetValue();
}
